tdf#160564 Treat xlink:type for embedded chart

xlink:type is a valid attribute for chart:chart according to ODF [1]
As this attribute is not yet used, this change just avoids the warning message

[1] https://docs.oasis-open.org/office/OpenDocument/v1.3/os/part3-schema/OpenDocument-v1.3-os-part3-schema.html#__RefHeading__1419428_253892949

Change-Id: I836c8ff4a284bafa8e0c8049ae6ae60c9fbe7a4c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165853
Reviewed-by: Laurent Balland <laurent.balland@mailo.fr>
Tested-by: Jenkins